--- a/backend/selection/templates/index.html
+++ b/backend/selection/templates/index.html
@@ -23,7 +23,10 @@
                 otevrit - Otevře experimentální sezení k přihlášení<br>
                 uzavrit - Do experimentálního sezení již nebude možno se dále přihlašovat<br>
                 spustit - Spustí experimentální sezení pro všechny participanty<br>
-                ukoncit - Ukončí experimentální sezení
+                ukoncit - Ukončí experimentální sezení<br>
+                ---------------------------------------------------------------------------------<br>
+                ukazat sezeni/skupiny/vyherce/participanty/nabidky - Ukáže data pro Sezení, Skupiny, Výherce, Participanty, Nabídky<br>
+                data sezeni/skupiny/vyherce/participanty/nabidky - Stáhne data pro Sezení, Skupiny, Výherce, Participanty, Nabídky
             </p>
             <p>Po zadání příkazu klikněte na tlačítko Provést.</p>
         </p>        
