info condition added

--- a/backend/selection/templates/index.html
+++ b/backend/selection/templates/index.html
@@ -21,7 +21,7 @@
             <p>Do textového pole můžete zadat jeden z následujících příkazů:</p>
             <p>
                 otevrit - Otevře experimentální sezení k přihlášení<br>
-                uzavrit - Do experimentálního sezení již nebude možno se dále přihlašovat<br>
+                uzavrit - Uzavře přihlašování do experimentálního sezení<br>
                 spustit - Spustí experimentální sezení pro všechny participanty<br>
                 ukoncit - Ukončí experimentální sezení<br>
                 ---------------------------------------------------------------------------------<br>
