data upload finished, download started

--- a/backend/selection/templates/index.html
+++ b/backend/selection/templates/index.html
@@ -26,7 +26,7 @@
                 ukoncit - Ukončí experimentální sezení<br>
                 ---------------------------------------------------------------------------------<br>
                 ukazat sezeni/skupiny/vyherce/participanty/nabidky - Ukáže data pro Sezení, Skupiny, Výherce, Participanty, Nabídky<br>
-                data sezeni/skupiny/vyherce/participanty/nabidky - Stáhne data pro Sezení, Skupiny, Výherce, Participanty, Nabídky
+                data sezeni/skupiny/vyherci/participanti/nabidky - Stáhne data pro Sezení, Skupiny, Výherci, Participanti, Nabídky
             </p>
             <p>Po zadání příkazu klikněte na tlačítko Provést.</p>
         </p>        
