--- a/backend/selection/templates/index.html
+++ b/backend/selection/templates/index.html
@@ -26,8 +26,8 @@
                 ukoncit - Ukončí experimentální sezení<br>
                 ---------------------------------------------------------------------------------<br>
                 ukazat sezeni/skupiny/vyherce/participanty/nabidky - Ukáže data pro Sezení, Skupiny, Výherce, Participanty, Nabídky<br>
-                data sezeni/skupiny/vyherci/participanti/nabidky - Stáhne data pro Sezení, Skupiny, Výherci, Participanti, Nabídky<br>
-                stahnout - Stáhne všechny soubory s výsledky v .zip souboru
+                data sezeni/skupiny/vyherci/participanti/nabidky/vse - Stáhne data pro Sezení, Skupiny, Výherci, Participanti, Nabídky nebo vše dohromady<br>
+                stahnout - Stáhne všechny soubory s výsledky participantů v .zip souboru
             </p>
             <p>Po zadání příkazu klikněte na tlačítko Provést.</p>
         </p>        
