option to skip a participant

--- a/backend/selection/templates/index.html
+++ b/backend/selection/templates/index.html
@@ -25,6 +25,7 @@
                 spustit - Spustí experimentální sezení pro všechny participanty<br>
                 ukoncit - Ukončí experimentální sezení<br>
                 ---------------------------------------------------------------------------------<br>
+                preskocit id - Odstraní participanta s daným id ze studie<br>
                 ukazat sezeni/skupiny/vyherce/participanty/nabidky - Ukáže data pro Sezení, Skupiny, Výherce, Participanty, Nabídky<br>
                 data sezeni/skupiny/vyherci/participanti/nabidky/vse - Stáhne data pro Sezení, Skupiny, Výherci, Participanti, Nabídky nebo vše dohromady<br>
                 stahnout - Stáhne všechny soubory s výsledky participantů v .zip souboru
