--- a/backend/selection/templates/index.html
+++ b/backend/selection/templates/index.html
@@ -20,12 +20,11 @@
         <p>
             <p>Do textového pole můžete zadat jeden z následujících příkazů:</p>
             <p>
-                otevrit - Otevře experimentální sezení k přihlášení<br>
-                uzavrit - Uzavře přihlašování do experimentálního sezení<br>
-                spustit - Spustí experimentální sezení pro všechny participanty<br>
-                ukoncit - Ukončí experimentální sezení<br>
+                otevrit - Otevře experimentální sezení k přihlášení (po usazení účastníků)<br>
+                spustit - Spustí experimentální sezení pro všechny participanty (jakmile se níže zobrazí, že je přihlášen správný počet účastníků)<br>
+                ukoncit - Ukončí experimentální sezení (jakmile je u všech účastníků zelená fajfka)<br>
                 ---------------------------------------------------------------------------------<br>
-                preskocit id - Odstraní participanta s daným id ze studie<br>
+                preskocit id - Odstraní participanta s daným id ze studie (při technických problémech)<br>
                 ukazat sezeni/skupiny/vyherce/participanty/nabidky - Ukáže data pro Sezení, Skupiny, Výherce, Participanty, Nabídky<br>
                 data sezeni/skupiny/vyherci/participanti/nabidky/vse - Stáhne data pro Sezení, Skupiny, Výherci, Participanti, Nabídky nebo vše dohromady<br>
                 stahnout - Stáhne všechny soubory s výsledky participantů v .zip souboru
