--- a/backend/selection/templates/index.html
+++ b/backend/selection/templates/index.html
@@ -25,8 +25,8 @@
                 ukoncit - Ukončí experimentální sezení (jakmile je u všech účastníků zelená fajfka)<br>
                 ---------------------------------------------------------------------------------<br>
                 preskocit id - Odstraní participanta s daným id ze studie (při technických problémech)<br>
-                ukazat sezeni/skupiny/vyherce/participanty/nabidky - Ukáže data pro Sezení, Skupiny, Výherce, Participanty, Nabídky<br>
-                data sezeni/skupiny/vyherci/participanti/nabidky/vse - Stáhne data pro Sezení, Skupiny, Výherci, Participanti, Nabídky nebo vše dohromady<br>
+                ukazat sezeni/skupiny/vyherce/participanty/nabidky - Ukáže data pro Sezení, Skupiny, Participanty<br>
+                data sezeni/skupiny/vyherci/participanti/nabidky/vse - Stáhne data pro Sezení, Skupiny, Participanty nebo vše dohromady<br>
                 stahnout - Stáhne všechny soubory s výsledky participantů v .zip souboru
             </p>
             <p>Po zadání příkazu klikněte na tlačítko Provést.</p>
