--- a/backend/selection/templates/index.html
+++ b/backend/selection/templates/index.html
@@ -24,6 +24,7 @@
                 spustit - Spustí experimentální sezení pro všechny participanty (jakmile se níže zobrazí, že je přihlášen správný počet účastníků)<br>
                 ukoncit - Ukončí experimentální sezení (jakmile je u všech účastníků zelená fajfka)<br>
                 ---------------------------------------------------------------------------------<br>
+                vyresit cisloParu - Pustí zaseknutý pár dále (při technických problémech)<br>
                 preskocit id - Odstraní participanta s daným id ze studie (při technických problémech)<br>
                 ukazat sezeni/skupiny/participanty/pary/vysledky - Ukáže příslušná data<br>
                 data sezeni/skupiny/participanti/pary/vysledky - Stáhne příslušná data<br>
